--- a/Browser/StartpageFirefox/src/manifest.json
+++ b/Browser/StartpageFirefox/src/manifest.json
@@ -1,29 +1,29 @@
 {
   "manifest_version": 2,
-  "name": "Custom StartPage",
-  "description": "Startpage",
+  "name": "CustomStartPage",
+  "description": "CustomStartPage",
   "version": "0.1",
   "chrome_url_overrides": {
-    "newtab": "index.html"
+    "newtab": "CustomStartPage.html"
   },
   "permissions": [
     "activeTab",
     "storage"
   ],
   "icons": {
-    "48": "assets/icons/favicon-48x48.png",
-    "96": "assets/icons/favicon-96x96.png"
+    "16": "assets/icons/favicon-16x16.png",
+    "32": "assets/icons/favicon-32x32.png"
   },
   "browser_action": {
     "default_popup": "popup.html",
     "default_icon": {
-      "48": "assets/icons/favicon-48x48.png",
-      "96": "assets/icons/favicon-96x96.png"
+      "16": "assets/icons/favicon-16x16.png",
+      "32": "assets/icons/favicon-32x32.png"
     }
   },
   "applications": {
     "gecko": {
-      "id": "x@x",
+      "id": "CustomStartPage@0.1",
       "strict_min_version": "60.0"
     }
   }
